Preloading best seller image two to avoid layout shift

--- a/src/components/lvl2/Footer/footer.module.css
+++ b/src/components/lvl2/Footer/footer.module.css
@@ -11,7 +11,7 @@
 
 .footerTop {
   width: 100%;
-  height: 500px;
+  height: 550px;
   display: flex;
   justify-content: space-between;
   align-items: center;
